# NeoNeo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
client/: client.py  zmqclient.py
include/: common.h
injector/: CMakeLists.txt  main.cpp
poc/: BUILD_GUIDE.md  Cargo.toml  PACKAGE_GUIDE.md  README.md
poc/injector/: Cargo.toml
poc/injector/src/: main.rs
poc/neohook/: Cargo.toml
poc/neohook/src/: common.rs  dialogue.rs  hook.rs  hook_param.rs  lib.rs  server.rs
poc/neohook/src/engine/: kirikiri.rs  mod.rs  pc.rs
src/: CMakeLists.txt  common.h  common.ixx  console.ixx  const.h  dialogue.cpp  dialogue.h  dialogue.ixx  engine_base.ixx  hook.cpp  hook.h  hook.ixx  hook_param.cpp  hook_param.h  hook_param.ixx  logger.cpp  logger.h  logger.ixx  main.cpp  main.ixx  neo_output.h  neo_output.ixx  pcengine.ixx  server.cpp  server.h  server.ixx  server_old.h
src/engines/: engine_base.cpp  engine_base.h
src/engines/PC/: engine.cpp  engine.h
src/engines/kirikiri/: engine.cpp  engine.h
test/: CMakeLists.txt  address_t_test.cpp  address_t_test.ixx  dialogue_test.cpp  hook_param_test.cpp  hook_param_test.ixx  server_test.cpp  wordseg_test.ixx
