[workspace]
members = ["injector", "neohook"]
resolver = "2"

[workspace.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"